Fix for overlapping vnf name
Remove 'position' tag from vnf-versions-name class as it blocks text wrapping

Issue-ID: VID-506

--- a/vid-app-common/src/main/webapp/app/vid/styles/modal-create-new.css
+++ b/vid-app-common/src/main/webapp/app/vid/styles/modal-create-new.css
@@ -192,9 +192,12 @@ a.item-unselected:before {
 .vnf-versions-name {
     padding-top: 6px;
     font-family: "OpenSans-Regular";
+}
+.vnf-versions-file {
+    padding-top: 6px;
+    font-family: "OpenSans-Regular";
     position: absolute;
 }
-
 .vnf-versions-select-as-text {
     font-family: "OpenSans-Regular";
     appearance: none;
